--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/ustc_background.jpg');">
+    <section class="top-section" style="background-image: url('static/assets/img/ustc.jpg');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
@@ -122,7 +122,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/lyt.JPG">
+            <img class="shadow" src="static/assets/img/lyt.jpg">
         </div>
     </div>
     <!-- Photo -->
